@@ -286,7 +286,7 @@ def extract_box_info(data, fver):
     return obj.Box(box, box_rel, box_v)
 
 
-def do_mtop(data, fver, tpr_resid_from_one=False):
+def do_mtop(data, fver, tpr_resid_from_one=True):
     # mtop: the topology of the whole system
     symtab = do_symtab(data)
     do_symstr(data, symtab)  # system_name
@@ -375,14 +375,7 @@ def do_mtop(data, fver, tpr_resid_from_one=False):
     resids = np.array(resids, dtype=np.int32)
     if tpr_resid_from_one:
         resids += 1
-    else:
-        warnings.warn("TPR files index residues from 0. "
-                      "From MDAnalysis version 2.0, resids will start "
-                      "at 1 instead. If you wish to keep indexing "
-                      "resids from 0, please set "
-                      "`tpr_resid_from_one=False` as a keyword argument "
-                      "when you create a new Topology or Universe.",
-                      category=DeprecationWarning)
+
     resnames = np.array(resnames, dtype=object)
     (residx, new_resids,
      (new_resnames,
